[touch:804]added WMR calendar as per ticket

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -99,6 +99,7 @@
     \emph{XLON} & UK London Stock Exchange \\ \hline
     \emph{XLME} & UK London Metal Exchange \\ \hline
     \emph{XNYS} & US New York Stock Exchange Calendar \\ \hline
+    \emph{WMR} & Thomson Reuters QM/Reuters Spot \\ \hline
     \emph{WeekendsOnly} & Weekends Only Calendar \\ \hline
     % \emph{US+TARGET, NYB\_TGT, TGT\_NYB} & US and Target Calendar \\ \hline  
     % \emph{NYB\_LNB, LNB\_NYB} & US and UK Calendar \\ \hline    
@@ -183,7 +184,8 @@ TENOR                    & An integer followed by \emph{D, W, M or Y}           
     \hline
     \bfseries{Trade Data} & \bfseries{Allowable Values} \\
     \hline
-    \lstinline!Name!   for equity trades & \begin{tabular}[l]{@{}l@{}}  Any string (provided it is the ID of an equity in the market \\conguration). \\ Typically a RIC-code with the \emph{RIC:} prefix \\  Examples: \\  \emph{RIC:.SPX}  (S\&P 500 Index) \\ \emph{RIC:EEM.N}  (iShares MSCI Emerging Markets ETF)    \\  \end{tabular}  \\ \hline
+    \lstinline!Name!   for equity trades & \begin{tabular}[l]{@{}l@{}}  Any string (provided it is the ID of an equity in the market \\
+conguration). \\ Typically a RIC-code with the \emph{RIC:} prefix \\  Examples: \\  \emph{RIC:.SPX}  (S\&P 500 Index) \\ \emph{RIC:EEM.N}  (iShares MSCI Emerging Markets ETF)    \\  \end{tabular}  \\ \hline
 %    \lstinline!Name!   for credit trades & \begin{tabular}[l]{@{}l@{}} 
 %\end{tabular}  \\ \hline
   \end{tabu}
