--- a/Docs/UserGuide/tradedata/fxswap.tex
+++ b/Docs/UserGuide/tradedata/fxswap.tex
@@ -34,4 +34,8 @@ The meanings and allowable values of the various elements in the \lstinline!FXSw
 \item FarDate: The date of the final fx exchange of the FX Swap. \\ Allowable values:  Any date further into the future than NearDate. See \lstinline!Date! in Table  \ref{tab:allow_stand_data}.
 \item FarBoughtAmount: The amount to be bought on far date.  \\ Allowable values:  Any positive real number.
 \item FarSoldAmount: The amount to be sold on far date.  \\ Allowable values:  Any positive real number.
+\item Settlement [Optional]: Delivery type.  Note that Non-Deliverable Swaps can be represented by \emph{Cash} settlement. Delivery type does not impact pricing in ORE.  
+
+Allowable values: \emph{Cash} or \emph{Physical}.  Defaults to \emph{Physical} if left blank or omitted.
+
 \end{itemize}
