First draft at PM docs #806

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -192,3 +192,19 @@ conguration). \\ Typically a RIC-code with the \emph{RIC:} prefix \\  Examples: 
   \caption{Allowable values for equity  data.}
   \label{tab:equity_credit_data}
 \end{table}
+
+
+\begin{table}[H]
+\centering
+  \begin{tabu} to 0.9\linewidth {| X[-1.5,l,m] | X[-5,l,m] |}
+    \hline
+    \multicolumn{2}{|l|}{\tt Commodity Curve Name} \\ \hline
+    \bfseries{Allowable Values} & \bfseries{Resulting Commodity Curve} \\
+    Any string (provided it is the ID of an equity in the market configuration) & The resulting curve\\
+  \end{tabu}
+  \caption{Allowable values for commodity data.}
+  \label{tab:commodity_data}
+\end{table}
+
+
+
