--- a/Docs/UserGuide/tradedata/commodityforward.tex
+++ b/Docs/UserGuide/tradedata/commodityforward.tex
@@ -9,7 +9,7 @@ Listing \ref{lst:comfwd_data}.
 <CommodityForwardData>
   <Position>Long</Position>
   <Maturity>2018-06-30</Maturity>
-  <Name>COMDTY_GOLD_USD</Name>
+  <Name>PM:XAUUSD</Name>
   <Currency>USD</Currency>
   <Strike>1355</Strike>
   <Quantity>1000</Quantity>
@@ -27,7 +27,7 @@ The meanings and allowable values of the elements in the \lstinline!CommodityFor
 	\item Maturity: The maturity date of the forward contract, i.e. the date when the underlying commodity will be bought/sold. \\
 	Allowable values: Any date string, see \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 	\item Name: The name of the underlying commodity. \\
-	Allowable values:  Any string (provided it is the ID of a commodity in the market configuration).
+	Allowable values:  See \lstinline!Name! for commodity trades in Table \ref{tab:commodity_data}. \\
 	\item Currency: The  currency of the commodity forward. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the commodity forward. \\
