--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -13,7 +13,7 @@ an example \lstinline!CommodityOptionData! node for a commodity option is shown 
     <OptionData>
       ...
     </OptionData>
-    <Name>COMDTY_WTI_USD</Name>
+    <Name>NYMEX:CL</Name>
     <Currency>USD</Currency>
     <Strike>70</Strike>
     <Quantity>500000</Quantity>
@@ -29,7 +29,7 @@ The meanings and allowable values of the elements in the \lstinline!CommodityOpt
 	\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note 
 	that the commodity option type allows for \emph{European} option style only.	
 	\item Name: The name of the underlying commodity. \\
-	Allowable values:  Any string (provided it is the ID of a commodity in the market configuration).
+	Allowable values:  See \lstinline!Name! for commodity trades in Table \ref{tab:commodity_data}. \\
 	\item Currency: The currency of the commodity option. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The option strike price.\\
