--- a/Docs/UserGuide/tradedata/commodityforward.tex
+++ b/Docs/UserGuide/tradedata/commodityforward.tex
@@ -1,6 +1,6 @@
 \subsubsection{Commodity Forward}
 
-The \lstinline!CommodityForwardData!  node is the trade data container for the  {\tt CommodityForward} trade type.   The structure of an example \lstinline!CommodityForwardData! node for a commodity option is shown in 
+The \lstinline!CommodityForwardData!  node is the trade data container for the  \emph{CommodityForward} trade type.   The structure of an example \lstinline!CommodityForwardData! node for a commodity option is shown in 
 Listing \ref{lst:comfwd_data}.
 
 \begin{listing}[H]
