--- a/Docs/UserGuide/tradedata/creditdefaultswap.tex
+++ b/Docs/UserGuide/tradedata/creditdefaultswap.tex
@@ -1,6 +1,6 @@
 \subsubsection{Credit Default Swap}
 
-A credit default swap is set up using a {\tt CreditDefaultSwapData} block as shown in listing \ref{lst:cdsdata}. The CDS specific elements
+A credit default swap (trade type \emph{CreditDefaultSwap} ) is set up using a {\tt CreditDefaultSwapData} block as shown in listing \ref{lst:cdsdata}. The CDS specific elements
 are
 
 \begin{itemize}
