--- a/Docs/UserGuide/tradedata/forwardrateagreement.tex
+++ b/Docs/UserGuide/tradedata/forwardrateagreement.tex
@@ -1,6 +1,7 @@
 \subsubsection{Forward Rate Agreement}
 
-A forward rate agreement is set up using a {\tt ForwardRateAgreementData} block as shown in listing \ref{lst:ForwardRateAgreementdata}. The forward rate agreement specific elements
+A forward rate agreement (trade type \emph{ForwardRateAgreement} is set up using a \\
+{\tt ForwardRateAgreementData} block as shown in listing \ref{lst:ForwardRateAgreementdata}. The forward rate agreement specific elements
 are:
 
 \begin{itemize}
