--- a/Docs/UserGuide/tradedata/fxswap.tex
+++ b/Docs/UserGuide/tradedata/fxswap.tex
@@ -1,6 +1,6 @@
 \subsubsection{FX Swap}
 
-The \lstinline!FXSwapData!  node is the trade data container for the FX Swap trade type.  The structure -
+The \lstinline!FXSwapData!  node is the trade data container for the \emph{FxSwap} trade type.  The structure -
 including example values - of the \lstinline!FXSwapData!  node is shown in Listing 
 \ref{lst:fxswap_data}. 
 It contains no sub-nodes.
