--- a/Docs/UserGuide/tradedata/swap.tex
+++ b/Docs/UserGuide/tradedata/swap.tex
@@ -1,6 +1,6 @@
 \subsubsection{Swap}
 
-The \lstinline!SwapData! node is the trade data container for the Swap trade type. A Swap must have at least one leg,
+The \lstinline!SwapData! node is the trade data container for the \emph{Swap} trade type. A Swap must have at least one leg,
 and can have an unlimited number of legs. Each leg is represented by a \lstinline!LegData! trade component sub-node,
 described in section \ref{ss:leg_data}. An example structure of a two-legged \lstinline!SwapData!
 node is shown in Listing \ref{lst:swap_data}.
