--- a/Docs/UserGuide/tradedata/swaption.tex
+++ b/Docs/UserGuide/tradedata/swaption.tex
@@ -1,6 +1,6 @@
 \subsubsection{Swaption}
 
-The \lstinline!SwaptionData!  node is the trade data container for the Swaption trade type. The \lstinline!SwaptionData!
+The \lstinline!SwaptionData!  node is the trade data container for the \emph{Swaption} trade type. The \lstinline!SwaptionData!
 node has one and exactly one \lstinline!OptionData! trade component sub-node, and at least one \lstinline!LegData! trade
 component sub-node.  These trade components are outlined in section \ref{ss:option_data} and section
 \ref{ss:leg_data}.\\
