--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -1,6 +1,6 @@
 \subsubsection{Commodity Option}
 
-The \lstinline!CommodityOptionData!  node is the trade data container for the commodity option trade type.  Vanilla commodity 
+The \lstinline!CommodityOptionData!  node is the trade data container for the \emph{CommodityOption} trade type.  Vanilla commodity 
 options are supported, the exercise style must be \emph{European}. The \lstinline!CommodityOptionData!  node includes one and 
 only one \lstinline!OptionData! trade component sub-node plus elements specific to the commodity option. The structure of 
 an example \lstinline!CommodityOptionData! node for a commodity option is shown in Listing
