--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -1,6 +1,6 @@
 \subsubsection{Equity Option}
 
-The \lstinline!EquityOptionData!  node is the trade data container for the equity option trade type.  Equity 
+The \lstinline!EquityOptionData!  node is the trade data container for the \emph{EquityOption} trade type.  Equity 
 options with exercise styles \emph{European} and \emph{American}. The \lstinline!EquityOptionData!  node includes one and 
 only one \lstinline!OptionData! trade component sub-node plus elements specific to the equity option. The structure of 
 an example \lstinline!EquityOptionData! node for an equity option is shown in Listing
