--- a/Docs/UserGuide/tradedata/zerocouponswap.tex
+++ b/Docs/UserGuide/tradedata/zerocouponswap.tex
@@ -1,6 +1,6 @@
 \subsubsection{Zero Coupon Swap}
 
-A Zero Coupon swap is set up as a swap, with one leg of type {\tt ZeroCouponFixed}. Listing \ref{lst:zeroswap} shows an
+A Zero Coupon swap is set up as a swap (trade type \emph{Swap}) , with one leg of type {\tt ZeroCouponFixed}. Listing \ref{lst:zeroswap} shows an
 example. The ZeroCouponFixed leg contains an additional {\tt ZeroCouponFixedLegData} block. See \ref{ss:zerolegdata} for details on the ZeroCouponFixed leg
 specification.
 
