--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -37,3 +37,6 @@ The meanings and allowable values of the elements in the \lstinline!CommodityOpt
 	\item Quantity: The number of units of the underlying commodity covered by the transaction. \\
 	Allowable values:  Any positive real number.
 \end{itemize}
+
+\subsubsection{Precious Metal Option}
+A Precious Metal Option should be represented as a Commodity Option as above.
