--- a/Docs/UserGuide/tradedata/commodityforward.tex
+++ b/Docs/UserGuide/tradedata/commodityforward.tex
@@ -35,3 +35,6 @@ The meanings and allowable values of the elements in the \lstinline!CommodityFor
 	\item Quantity: The number of units of the underlying commodity to be bought/sold. \\
 	Allowable values:  Any positive real number.
 \end{itemize}
+
+\subsubsection{Precious Metal Forward}
+A Precious Metal Forward should be represented as a Commodity Forward as above.
