Update userguide and shift comment

--- a/Docs/UserGuide/marketdata.tex
+++ b/Docs/UserGuide/marketdata.tex
@@ -527,7 +527,7 @@ Example:
     Flat tenor & An integer followed by D, W, M or Y & Zero spread leg's index tenor\\ \hline
     Tenor & An integer followed by D, W, M or Y & Non-zero spread leg's index tenor\\ \hline
     Currency & See \lstinline!Currency! in Table~\ref{tab:allow_stand_data}& Currency of the basis swap spread\\ \hline
-    Optional Identifier &\emph{LIBOR\_PRIME}\newline \emph{LIBOR\_FEDFUNDS} & Basis swap name\\ \hline
+    Optional Identifier && Basis swap name\\ \hline
     Term & An integer followed by D, W, M or Y & Swap length from start to maturity\\ \hline
   \end{tabular}
   \caption{Basis Swap Spread}
