switch from ISN to RED codes for credit in docs

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -182,13 +182,14 @@ TENOR                    & An integer followed by \emph{D, W, M or Y}           
 \centering
   \begin{tabu} to 1.0\linewidth {| X[-1.65,l,m] | X[-5.7,l,m] |}
     \hline
-    \multicolumn{2}{|l|}{\tt Equity Name} \\ \hline
+    \multicolumn{2}{|l|}{\tt Equity and Credit Name} \\ \hline
     \bfseries{Trade Data} & \bfseries{Allowable Values} \\
     \hline
     \lstinline!Name!   for equity trades & \begin{tabular}[l]{@{}l@{}}  Any string (provided it is the ID of an equity in the market \\
 conguration). \\ Typically a RIC-code with the \emph{RIC:} prefix \\  Examples: \\  \emph{RIC:.SPX}  (S\&P 500 Index) \\ \emph{RIC:EEM.N}  (iShares MSCI Emerging Markets ETF)    \\  \end{tabular}  \\ \hline
-%    \lstinline!Name!   for credit trades & \begin{tabular}[l]{@{}l@{}} 
-%\end{tabular}  \\ \hline
+    \lstinline!Name!   for credit trades - single name and index & \begin{tabular}[l]{@{}l@{}} Any string (provided it is the ID of a single name or index \\ reference entity in the market 
+conguration). \\ Typically a RED-code with the \emph{RED:} prefix \\  Examples: \\  \emph{RED:2I65BRHH6}  (CDX N.A. High Yield, Series 13, Version 1) \\ \emph{RED:008CA0\textbar{}SNRFOR\textbar{}USD\textbar{}MR14}  (Agilent Tech Senior USD)
+\end{tabular}  \\ \hline
   \end{tabu}
   \caption{Allowable values for equity data.}
   \label{tab:equity_credit_data}
