--- a/Docs/UserGuide/tradedata/commodityoption.tex
+++ b/Docs/UserGuide/tradedata/commodityoption.tex
@@ -1,4 +1,5 @@
 \subsubsection{Commodity Option}
+\label{ss:input_commodity_option}
 
 The \lstinline!CommodityOptionData!  node is the trade data container for the \emph{CommodityOption} trade type.  Vanilla commodity 
 options are supported, the exercise style must be \emph{European}. The \lstinline!CommodityOptionData!  node includes one and 
