[Touch: 835]Add commodity future conventions documentation

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -1,6 +1,12 @@
 \documentclass[12pt, a4paper]{article}
 
-\usepackage[urlcolor=blue]{hyperref}
+% Use \hypersetup here to get rid of the ugly boxes around links
+\usepackage{hyperref}
+\hypersetup{
+  colorlinks=true,
+  linkcolor=blue,
+  urlcolor=blue
+}
 
 \usepackage[disable]{todonotes}
 %\usepackage{todonotes}
