add ester and sofr indices

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -151,8 +151,8 @@
 \textbf{Index Component} & \textbf{Allowable Values}                                                                                                                                                                                                                                                           \\ \hline
 CCY-INDEX                &
                            \textit{\begin{tabular}[c]{@{}l@{}}
-EUR-EONIA\\ EUR-EURIBOR\\ EUR-LIBOR\\ EUR-CMS\\ 
-USD-FedFunds\\ USD-Prime\\ USD-LIBOR\\ USD-SIFMA\\ USD-CMS\\
+EUR-EONIA\\ EUR-ESTER \\ EUR-EURIBOR\\ EUR-LIBOR\\ EUR-CMS\\
+USD-FedFunds\\ USD-SOFR \\ USD-Prime\\ USD-LIBOR\\ USD-SIFMA\\ USD-CMS\\
 GBP-SONIA\\ GBP-LIBOR\\ GBP-CMS\\ 
 JPY-LIBOR\\ JPY-TIBOR \\ JPY-TONAR \\ JPY-CMS \\
 CHF-LIBOR\\ CHF-SARON\\ 
